# schema-manager

./: .gitignore  Readme.md  __init__.py  code.py  paper.py  pyproject.toml  user.py
schema-manager/: common.py  credit.py  idea.py  project.py
schema_manager/: __init__.py  idea.py  user.py
